# sPion

./: .gitignore  README.md  install_service.sh  main.py  main_radxa.py  params.py  pyproject.toml  requirements.txt  testsim.py
radxa_service/: pion_server.service
remote_installer/: installer.py  installer_radxa.py
scripts/: main.py  params.py
scripts/remote_installer/: installer.py  installer_radxa.py
src/swarmpion/scripts/: install_service.sh  main.py  main_radxa.py  params.py  testsim.py
